--- a/src/defines/global.tex
+++ b/src/defines/global.tex
@@ -1,4 +1,1 @@
-\input{src/defines/parts/env}
-\input{src/defines/parts/math}
-\input{src/defines/parts/microbundle}
-\input{src/defines/parts/text}
+\input{src/defines/parts/env} \input{src/defines/parts/math} \input{src/defines/parts/microbundle} \input{src/defines/parts/text}
