--- a/src/sections/homotopy/parts/lemma2.tex
+++ b/src/sections/homotopy/parts/lemma2.tex
@@ -1,28 +1,11 @@
-% lemma
-\begin{mystatement}{lemma}{homotopy::lemma2}[67]
-    Let $\bb$ be a microbundle over $\cyl{B}$.
-    Then every $b \in B$ has a neighborhood $V$ such that $\bb[\cyl{V}]$ is trivial.
-\end{mystatement}
+\begin{mystatement}{lemma}{homotopy::lemma2}[67] Let $\bb$ be a microbundle over $\cyl{B}$. Then every $b \in B$ has a neighborhood $V$ such that $\bb[\cyl{V}]$ is trivial. \end{mystatement}
 
-% proof
-\begin{myproof}
-    Let $b \in B$ be arbitrary.
+\begin{myproof} Let $b \in B$ be arbitrary.
 
-    For every $t \in \I$, assume a neighborhood
-    $U_t = V_t \cross (t - \eps_t, t + \eps_t)$ of $(b, t)$
-    such that $\bb[U_t]$ is trivial.
-    Such a neighborhood can be constructed by taking
-    a local trivialization $(U', V', \phi')$ of $(b, t)$ in $\bb$
-    and restricting $U'$ accordingly.
+For every $t \in \I$, assume a neighborhood $U_t = V_t \cross (t - \eps_t, t + \eps_t)$ of $(b, t)$ such that $\bb[U_t]$ is trivial. Such a neighborhood can be constructed by taking a local trivialization $(U', V', \phi')$ of $(b, t)$ in $\bb$ and restricting $U'$ accordingly.
 
-    Since $\cyl{\coll{b}}$ is compact, we can choose finitely many
-    \[ V_1 \cross (t_1 - \eps_1, t_1 + \eps_1), \dots, V_n \cross (t_n - \eps_n, t_n + \eps_n) \]
-    covering $\{b\} \cross \I$ and define $V = V_1 \cap \dots \cap V_n$.
+Since $\cyl{\coll{b}}$ is compact, we can choose finitely many \[ V_1 \cross (t_1 - \eps_1, t_1 + \eps_1), \dots, V_n \cross (t_n - \eps_n, t_n + \eps_n) \] covering $\{b\} \cross \I$ and define $V = V_1 \cap \dots \cap V_n$.
 
-    The restricted microbundles $\bb[V \cross (t_i - \eps_i, t_i + \eps_i)]$ are trivial
-    as every $\bb[U_t]$ is trivial and $V \cross (t_i - \eps_i, t_i + \eps_i) \sub U_t$.
-    It follows that there exists a subdivision $0 = t_0 < \cdots < t_k = 1$ such that every $\bb[V \cross [t_{i}, t_{i + 1}]]$ is trivial.
-    
-    By iteratively applying the previous lemma on the $\bb[V \cross [t_i, t_{i + 1}]]$,
-    we conclude that $\bb[\cyl{V}]$ is trivial.
-\end{myproof}
+The restricted microbundles $\bb[V \cross (t_i - \eps_i, t_i + \eps_i)]$ are trivial as every $\bb[U_t]$ is trivial and $V \cross (t_i - \eps_i, t_i + \eps_i) \sub U_t$. It follows that there exists a subdivision $0 = t_0 < \cdots < t_k = 1$ such that every $\bb[V \cross [t_{i}, t_{i + 1}]]$ is trivial.
+
+By iteratively applying the previous lemma on the $\bb[V \cross [t_i, t_{i + 1}]]$, we conclude that $\bb[\cyl{V}]$ is trivial. \end{myproof}
