--- a/src/sections/homotopy/parts/theorem.tex
+++ b/src/sections/homotopy/parts/theorem.tex
@@ -1,32 +1,9 @@
-% foreword
-\begin{myparagraph}
-    Finally, we gathered all the tools to prove the Homotopy Theorem.
-\end{myparagraph}
+\begin{myparagraph} Finally, we gathered all the tools to prove the Homotopy Theorem. \end{myparagraph}
 
-% proof
-\begin{myproof}[of the Homotopy Theorem]
-    The previous lemma yields a bundle-germ
-    \[ \germdef{R}{\ind{H}\bb}{\ind{H}\bb[\cylup{A}]} \]
-    covering the retraction $(a, t) \mapsto (a, 1)$.
+\begin{myproof}[of the Homotopy Theorem] The previous lemma yields a bundle-germ\[ \germdef{R}{\ind{H}\bb}{\ind{H}\bb[\cylup{A}]} \] covering the retraction $(a, t) \mapsto (a, 1)$.
 
-    By restricting $R$ to $\ind{H}\bb[\cyldown{A}]$, we obtain a bundle-germ
-    \[ \germ{\ind{H}\bb[\cyldown{A}]}{\ind{H}\bb[\cylup{A}]} \]
-    covering $\theta: \cyldown{A} \isomto \cylup{A}$ with $\theta(a, 0) = (a, 1)$.
-    \myintref{homotopy::corollary} then infers that
-    $\ind{H}\bb[\cyldown{A}] \cong \ind{\theta}(\ind{H}\bb[\cylup{A}])$.
-    
-    Considering $\cyldown{A} = A$,
-    we can identify $\ind{H}\bb[\cyldown{A}]$ with $\ind{f}\bb$ as follows:
-    \[
-        \ind{H}\bb[A \cross \{0\}] =
-        \ind{\iota}(\ind{H}\bb) \cong
-        \ind{(H \circ \iota)}\bb =
-        \ind{f}\bb
-    \]
-    Analogously, we can identify
-    $\ind{\theta}(\ind{H}\bb[\cylup{A}])$ with $\ind{g}\bb$.
+By restricting $R$ to $\ind{H}\bb[\cyldown{A}]$, we obtain a bundle-germ \[ \germ{\ind{H}\bb[\cyldown{A}]}{\ind{H}\bb[\cylup{A}]} \] covering $\theta: \cyldown{A} \isomto \cylup{A}$ with $\theta(a, 0) = (a, 1)$. \myintref{homotopy::corollary} then infers that $\ind{H}\bb[\cyldown{A}] \cong \ind{\theta}(\ind{H}\bb[\cylup{A}])$.
 
-    Together with
-    $\ind{H}\bb[\cyldown{A}] \cong \ind{\theta}(\ind{H}\bb[\cylup{A}])$,
-    it follows that $\ind{f}\bb \cong \ind{g}\bb$.
-\end{myproof}
+Considering $\cyldown{A} = A$, we can identify $\ind{H}\bb[\cyldown{A}]$ with $\ind{f}\bb$ as follows: \[ \ind{H}\bb[A \cross \{0\}] = \ind{\iota}(\ind{H}\bb) \cong \ind{(H \circ \iota)}\bb = \ind{f}\bb \] Analogously, we can identify $\ind{\theta}(\ind{H}\bb[\cylup{A}])$ with $\ind{g}\bb$.
+
+Together with $\ind{H}\bb[\cyldown{A}] \cong \ind{\theta}(\ind{H}\bb[\cylup{A}])$, it follows that $\ind{f}\bb \cong \ind{g}\bb$. \end{myproof}
