--- a/src/sections/induced/parts/restriction.tex
+++ b/src/sections/induced/parts/restriction.tex
@@ -1,18 +1,3 @@
-% definition
-\begin{mystatement}{example}[restricted microbundle]{induced::restricted}[54]
-    Let $\bundledef{\bb}{B}{E}{i}{j}$ be a microbundle and $A \sub B$ be a subspace.
-    The \defterm{restricted microbundle} $\bb[A]$ is the induced microbundle $\ind{\iota}\bb$
-    where $\iota: A \incl B$ denotes the inclusion map.
-\end{mystatement}
+\begin{mystatement}{example}[restricted microbundle]{induced::restricted}[54] Let $\bundledef{\bb}{B}{E}{i}{j}$ be a microbundle and $A \sub B$ be a subspace. The \defterm{restricted microbundle} $\bb[A]$ is the induced microbundle $\ind{\iota}\bb$ where $\iota: A \incl B$ denotes the inclusion map. \end{mystatement}
 
-% remark
-\begin{mystatement}{remark}{induced::total}
-    From now on, we consider $E(\bb[A])$ to be a subset of $E(\bb)$.
-    This is justified because there exists an embedding
-    \begin{center}
-        $\iota: E(\bb[A]) \to E(\bb)$ with $(a, e) \mapsto e$
-    \end{center}
-    together with the inverse $e \mapsto (j(e), e)$.
-    Note that the same reasoning can be applied to
-    induced microbundles over any injective map.
-\end{mystatement}
+\begin{mystatement}{remark}{induced::total} From now on, we consider $E(\bb[A])$ to be a subset of $E(\bb)$. This is justified because there exists an embedding \begin{center} $\iota: E(\bb[A]) \to E(\bb)$ with $(a, e) \mapsto e$ \end{center} together with the inverse $e \mapsto (j(e), e)$. Note that the same reasoning can be applied to induced microbundles over any injective map. \end{mystatement}
