--- a/src/sections/induced/parts/simplex.tex
+++ b/src/sections/induced/parts/simplex.tex
@@ -1,26 +1,9 @@
-% foreword
-\begin{myparagraph}
-    We can derive a statement from this about extending a microbundle over a simplex
-    by utilizing that the cone of the boundary of a simplex
-    is homeomorphic to the simplex itself.
-\end{myparagraph}
+\begin{myparagraph} We can derive a statement from this about extending a microbundle over a simplex by utilizing that the cone of the boundary of a simplex is homeomorphic to the simplex itself. \end{myparagraph}
 
-% corollary
-\begin{mystatement}{corollary}{induced::simplex}
-    Let $B$ be a $(d + 1)$-simplicial complex, $B'$ its $d$-skeleton and $\Delta \sub B$ a $(d + 1)$-simplex.
-    A microbundle $\bb$ over $B'$ can be extended to a microbundle over $B' \cup \Delta$
-    if and only if its restriction to the boundary $\bb[\partial \Delta]$ is trivial.
-\end{mystatement}
+\begin{mystatement}{corollary}{induced::simplex} Let $B$ be a $(d + 1)$-simplicial complex, $B'$ its $d$-skeleton and $\Delta \sub B$ a $(d + 1)$-simplex. A microbundle $\bb$ over $B'$ can be extended to a microbundle over $B' \cup \Delta$ if and only if its restriction to the boundary $\bb[\partial \Delta]$ is trivial. \end{mystatement}
 
-% proof
-\begin{myproof}
-    With $f: \partial \Delta \incl B'$ and the previous lemma,
-    it follows that there exists a microbundle $\bb'$ over $B' \cup_f C\partial\Delta$ extending $\bb$
-    if and only if $\ind{f}\bb = \bb[\partial\Delta]$ is trivial.
+\begin{myproof} With $f: \partial \Delta \incl B'$ and the previous lemma, it follows that there exists a microbundle $\bb'$ over $B' \cup_f C\partial\Delta$ extending $\bb$ if and only if $\ind{f}\bb = \bb[\partial\Delta]$ is trivial.
 
-    We have a homeomorphism $\phi: C\partial \Delta \isomto \Delta$ given by
-    \[ \phi((t_1, \dots, t_{d + 1}), \lambda) = (1 - \lambda) (t_1, \dots, t_{d + 1}) + \frac{\lambda}{d + 1} (1, \dots, 1). \]
-    Particularly, $\phi(\partial \Delta \cross \{0\}) = \partial \Delta$.
+We have a homeomorphism $\phi: C\partial \Delta \isomto \Delta$ given by \[ \phi((t_1, \dots, t_{d + 1}), \lambda) = (1 - \lambda) (t_1, \dots, t_{d + 1}) + \frac{\lambda}{d + 1} (1, \dots, 1). \] Particularly, $\phi(\partial \Delta \cross \{0\}) = \partial \Delta$.
 
-    It follows that $B' \cup_f C \partial\Delta \cong B' \cup \Delta$, which concludes the proof.
-\end{myproof}
+It follows that $B' \cup_f C \partial\Delta \cong B' \cup \Delta$, which concludes the proof. \end{myproof}
