--- a/src/sections/induced/parts/trivial.tex
+++ b/src/sections/induced/parts/trivial.tex
@@ -1,35 +1,9 @@
-% lemma
-\begin{mystatement}{lemma}{induced::trivial}
-    Let $\bb$ be a microbundle over $B$ and $f: A \to B$ be a map.
-    The induced microbundle $\ind{f}\bb$ is trivial if $\bb$ is already trivial.
-\end{mystatement}
+\begin{mystatement}{lemma}{induced::trivial} Let $\bb$ be a microbundle over $B$ and $f: A \to B$ be a map. The induced microbundle $\ind{f}\bb$ is trivial if $\bb$ is already trivial. \end{mystatement}
 
-% proof
-\begin{myproof}
-    % homeomorphism
-    Since $\bb$ is trivial, there exists a homeomorphism $\psi: V \to \psi(V)$
-    where $V$ is a neighborhood of $i(B)$ and $\psi(V)$ is a neighborhood of $B \cross \{0\}$
-    such that $\psi$ commutes with the injection and projection maps of $\bb$ and $\be{A}$.
-    
-    Consider the map $\psi_f: V_f \isomto \psi_f(V_f) \sub A \cross \R^n$ given by
-    \[ \psi_f(a, e) = (a, \snd{\psi}(e)), \]
-    where $V_f = (A \cross V) \cap E(\ind{f}\bb)$.
-    The existence of an inverse $\inv{\psi_f}(a, x) = (a, \inv{\psi}(f(a), x))$
-    and component-wise continuity for both $\psi_f$ and $\inv{\psi_f}$
-    show that $\psi_f$ is a homeomorphism.
-    
-    % neighborhoods
-    The subset $V_f$ is a neighborhood of $i_f(A)$ since
-    $i_f(a) = (a, i(f(a)))$ and $i(f(a)) \in V$.
-    From $\snd{\psi}(i(f(a))) = 0$ and openness of $\psi_f$
-    it follows that $\psi_f(V_f)$ is a neighborhood of $\cyldown{A}$.
-    Hence, $\psi_f$ maps a neighborhood of $i_f(A)$
-    to a neighborhood of $\cyldown{A}$.
+\begin{myproof} Since $\bb$ is trivial, there exists a homeomorphism $\psi: V \to \psi(V)$ where $V$ is a neighborhood of $i(B)$ and $\psi(V)$ is a neighborhood of $B \cross \{0\}$ such that $\psi$ commutes with the injection and projection maps of $\bb$ and $\be{A}$.
 
-    % commutativity
-    Commutativity with the injection maps is given by
-    \[ \psi_f(i_f(a)) = (a, \snd{\psi}(i(f(a)))) = (a, 0) = (id \cross 0)(a) \]
-    and with the projection maps by
-    \[ j_f(a, e) = a = \pi_1(a, \snd{\psi}(e)) = \pi_1(\psi_f(a, e)), \]
-    which completes the proof.
-\end{myproof}
+Consider the map $\psi_f: V_f \isomto \psi_f(V_f) \sub A \cross \R^n$ given by \[ \psi_f(a, e) = (a, \snd{\psi}(e)), \] where $V_f = (A \cross V) \cap E(\ind{f}\bb)$. The existence of an inverse $\inv{\psi_f}(a, x) = (a, \inv{\psi}(f(a), x))$ and component-wise continuity for both $\psi_f$ and $\inv{\psi_f}$ show that $\psi_f$ is a homeomorphism.
+
+The subset $V_f$ is a neighborhood of $i_f(A)$ since $i_f(a) = (a, i(f(a)))$ and $i(f(a)) \in V$. From $\snd{\psi}(i(f(a))) = 0$ and openness of $\psi_f$ it follows that $\psi_f(V_f)$ is a neighborhood of $\cyldown{A}$. Hence, $\psi_f$ maps a neighborhood of $i_f(A)$ to a neighborhood of $\cyldown{A}$.
+
+Commutativity with the injection maps is given by \[ \psi_f(i_f(a)) = (a, \snd{\psi}(i(f(a)))) = (a, 0) = (id \cross 0)(a) \] and with the projection maps by \[ j_f(a, e) = a = \pi_1(a, \snd{\psi}(e)) = \pi_1(\psi_f(a, e)), \] which completes the proof. \end{myproof}
