--- a/src/sections/normal/parts/definition.tex
+++ b/src/sections/normal/parts/definition.tex
@@ -1,7 +1,5 @@
-% definition
-\begin{mystatement}{definition}[normal microbundle]{normal::definition}[61]
-    Let $M$ be a topological manifold together with a submanifold $N \sub M$.
-    A \defterm{normal microbundle} $\bn$ of $N$ in $M$ is a microbundle
-    \[ \bundle{N}{U}{\iota}{r} \]
-    where $U \sub M$ is a neighborhood of $N$ and $\iota$ denotes the inclusion $N \incl U$.
+
+\begin{mystatement}{definition}[normal
+microbundle]{normal::definition}[61]
+where $U \sub M$ is a neighborhood of $N$ and $\iota$ denotes the inclusion $N \incl U$.
 \end{mystatement}
