--- a/src/sections/rooted/parts/homotopy.tex
+++ b/src/sections/rooted/parts/homotopy.tex
@@ -1,146 +1,42 @@
-% foreword theorem
-\begin{myparagraph}
-    Given a rooted microbundle $\bb$ and homotopic based maps $f, g: A \to B$,
-    the Homotopy Theorem yields that $\ind{f}\bb$ and $\ind{g}\bb$
-    are isomorphic (not rooted-isomorphic).
-    
-    With the preliminary work in \myintref{section::homotopy_prove}, we can derive
-    a version of the Homotopy Theorem that also accounts for rooted isomorphy.
-\end{myparagraph}
 
-% theorem
-\begin{mystatement}{theorem}[Rooted Homotopy Theorem]{suspension::homotopy}[69]
-    Let $\bb$ be a rooted microbundle over $B$ and let $f, g: A \to B$ be two based maps
-    where $A$ is paracompact hausdorff.
-    If there exists a homotopy $H: \cyl{A} \to B$ between $f$ and $g$ that leaves the base point fixed,
-    then the two rooted microbundles $\ind{f}\bb$ and $\ind{g}\bb$ are rooted isomorphic.
-\end{mystatement}
+\begin{myparagraph} Given a rooted microbundle $\bb$ and homotopic based maps $f, g: A \to B$, the Homotopy Theorem yields that $\ind{f}\bb$ and $\ind{g}\bb$ are isomorphic (not rooted-isomorphic).
 
-% foreword lemma
-\begin{myparagraph}
-    In order to prove this,
-    we need to show a `rooted version' of \myintref{homotopy::lemma2}.
-    
-    First, note that
-    \[
-        E(\ind{H}\bb[\cyl{a_0}]) = E(\ind{\iota}(\ind{H}(\bb)))
-        \cong E(\ind{(H \circ \iota)}\bb) = E(\ind{c_{\cyl{a_0}, b_0}}\bb),
-    \]
-    whose total space is of the form $(a_0 \cross [0, 1]) \cross E(\bb)$.
-    Based on this, we can define an isomorphism-germ
-    $\germdef{\overline{R}}{\ind{H}\bb[\cyl{a_0}]}{\be{\cyl{a_0}}}$
-    represented by
-    \[ \overline{r}(a_0, t, v) = (a_0, t, \snd{r}(v)), \]
-    where $r: V \to b_0 \cross \R^n$ is a representative for $R$.
-    Note that $\overline{r}$ is a homeomorphism on its image,
-    since its components are homeomorphisms on their image.
-\end{myparagraph}
+With the preliminary work in \myintref{section::homotopy_prove}, we can derive a version of the Homotopy Theorem that also accounts for rooted isomorphy. \end{myparagraph}
 
-% lemma
-\begin{mystatement}{lemma}{suspension::sharper}[69]
-    Let $\bb$ be a rooted microbundle over $B$ and
-    let $H: \cyl{A} \to B$ be a map that leaves the base point fixed.
-    Then there exists a neighborhood $V$ of $a_0$ together with an isomorphism-germ
-    \[ \germ{\ind{H}\bb[\cyl{V}]}{\be{\cyl{V}}} \]
-    extending $\overline{R}$ (as defined above).
-\end{mystatement}
+\begin{mystatement}{theorem}[Rooted Homotopy Theorem]{suspension::homotopy}[69] Let $\bb$ be a rooted microbundle over $B$ and let $f, g: A \to B$ be two based maps where $A$ is paracompact hausdorff. If there exists a homotopy $H: \cyl{A} \to B$ between $f$ and $g$ that leaves the base point fixed, then the two rooted microbundles $\ind{f}\bb$ and $\ind{g}\bb$ are rooted isomorphic. \end{mystatement}
 
-% proof lemma
-\begin{myproof}
-    By applying \myintref{homotopy::lemma2},
-    it follows that there exists an isomorphism-germ
-    \[ \germdef{Q}{\ind{H}\bb[\cyl{V}]}{\be{\cyl{V}}} \]
-    for a sufficiently small neighborhood $V$ of $a_0$.
-    However, $Q$ does not extend $\overline{R}$ in general.
+\begin{myparagraph} In order to prove this, we need to show a `rooted version' of \myintref{homotopy::lemma2}.
 
-    In order to fix this, consider
-    \[ \germdef{Q \circ \inv{\overline{R}}}{\be{\cyl{a_0}}}{\be{\cyl{a_0}}} \]
-    together with a representative $f: U_f \to (\cyl{a_0}) \cross \R^n$.
+First, note that \[ E(\ind{H}\bb[\cyl{a_0}]) = E(\ind{\iota}(\ind{H}(\bb))) \cong E(\ind{(H \circ \iota)}\bb) = E(\ind{c_{\cyl{a_0}, b_0}}\bb), \] whose total space is of the form $(a_0 \cross [0, 1]) \cross E(\bb)$. Based on this, we can define an isomorphism-germ $\germdef{\overline{R}}{\ind{H}\bb[\cyl{a_0}]}{\be{\cyl{a_0}}}$ represented by \[ \overline{r}(a_0, t, v) = (a_0, t, \snd{r}(v)), \] where $r: V \to b_0 \cross \R^n$ is a representative for $R$. Note that $\overline{r}$ is a homeomorphism on its image, since its components are homeomorphisms on their image. \end{myparagraph}
 
-    Similar to the construction of $\overline{R}$, we can construct an isomorphism-germ
-    \[ \germdef{P}{\be{\cyl{V}}}{\be{\cyl{V}}} \]
-    extending $Q \circ \inv{\overline{R}}$ represented by
-    \[ (a, t, x) \mapsto (a, f(a_0, t, x)) \]
-    considering $f(a_0, t, x) \in \I \cross \R^n$.
+\begin{mystatement}{lemma}{suspension::sharper}[69] Let $\bb$ be a rooted microbundle over $B$ and let $H: \cyl{A} \to B$ be a map that leaves the base point fixed. Then there exists a neighborhood $V$ of $a_0$ together with an isomorphism-germ \[ \germ{\ind{H}\bb[\cyl{V}]}{\be{\cyl{V}}} \] extending $\overline{R}$ (as defined above). \end{mystatement}
 
-    Restricted to $\be{\cyl{a_0}}$, $P$ agrees with $Q \circ \inv{\overline{R}}$ and thus
-    \[
-        \inv{Q} \circ P\restr{\be{\cyl{a_0}}}
-        = (\inv{Q} \circ (Q \circ \inv{\overline{R}}))
-        = ((\inv{Q} \circ Q) \circ \inv{\overline{R}})
-        = \inv{\overline{R}}.
-    \]
-    % \[ \implies (\inv{P} \circ Q)\restr{\ind{H}\bb[\cyl{a_0}]} = \overline{R}. \]
-    Since $P$ and $Q$ are both isomorphism-germs,
-    \[ \germdef{\inv{P} \circ Q}{\ind{H}\bb[\cyl{V}]}{\be{\cyl{V}}} \]
-    is an isomorphism-germ extending $\overline{R}$.
-\end{myproof}
+\begin{myproof} By applying \myintref{homotopy::lemma2}, it follows that there exists an isomorphism-germ \[ \germdef{Q}{\ind{H}\bb[\cyl{V}]}{\be{\cyl{V}}} \] for a sufficiently small neighborhood $V$ of $a_0$. However, $Q$ does not extend $\overline{R}$ in general.
 
-% foreword proof
-\begin{myparagraph}
-    We are now able to show the Rooted Homotopy Theorem.
+In order to fix this, consider \[ \germdef{Q \circ \inv{\overline{R}}}{\be{\cyl{a_0}}}{\be{\cyl{a_0}}} \] together with a representative $f: U_f \to (\cyl{a_0}) \cross \R^n$.
 
-    To understand the proof,
-    it is useful to have the constructions of \myintref{homotopy::lemma3} in mind,
-    because we will modify them slightly in order to preserve the rootings.
-\end{myparagraph}
+Similar to the construction of $\overline{R}$, we can construct an isomorphism-germ \[ \germdef{P}{\be{\cyl{V}}}{\be{\cyl{V}}} \] extending $Q \circ \inv{\overline{R}}$ represented by \[ (a, t, x) \mapsto (a, f(a_0, t, x)) \] considering $f(a_0, t, x) \in \I \cross \R^n$.
 
-% proof theorem
-\begin{myproof}[of the Rooted Homotopy Theorem]
-    We need to show that $\ind{f}\bb$ and $\ind{g}\bb$ are rooted isomorphic,
-    that is, there exists an isomorphism-germ $\germ{\ind{f}\bb}{\ind{g}\bb}$
-    extending $\inv{R_g} \circ R_f = I$
-    where $I$ denotes the identity germ.
+Restricted to $\be{\cyl{a_0}}$, $P$ agrees with $Q \circ \inv{\overline{R}}$ and thus \[ \inv{Q} \circ P\restr{\be{\cyl{a_0}}} = (\inv{Q} \circ (Q \circ \inv{\overline{R}})) = ((\inv{Q} \circ Q) \circ \inv{\overline{R}}) = \inv{\overline{R}}. \] Since $P$ and $Q$ are both isomorphism-germs, \[ \germdef{\inv{P} \circ Q}{\ind{H}\bb[\cyl{V}]}{\be{\cyl{V}}} \] is an isomorphism-germ extending $\overline{R}$. \end{myproof}
 
-    For the initial Homotopy Theorem,
-    we constructed a bundle-germ
-    \[ \germdef{F}{\ind{H}\bb}{\ind{H}\bb[\cylup{A}]} \]
-    covering $(a, t) \mapsto (a, 1)$
-    and restricted it to $\ind{H}\bb[\cyldown{A}]$.
-    The required isomorphism-germ was then obtained by
-    identifying $\ind{f}\bb$ with $\ind{H}\bb[\cyldown{A}]$ and
-    $\ind{g}\bb$ with $\ind{H}\bb[\cyldown{A}]$.
+\begin{myparagraph} We are now able to show the Rooted Homotopy Theorem.
 
-    We must make slight modifications
-    to the construction of $F$ such that it extends
-    $\germ{\ind{f}\bbb \cong \ind{H}\bb[\cyldown{a_0}]}{\ind{H}\bb[\cylup{a_0}] \cong \ind{g}\bbb}$
-    represented by
-    \[ (a_0, e) = ((a_0, 0), e) \mapsto ((a_0, 1), e) = (a_0, e). \]
+To understand the proof, it is useful to have the constructions of \myintref{homotopy::lemma3} in mind, because we will modify them slightly in order to preserve the rootings. \end{myparagraph}
 
-    This can be achieved by choosing a locally finite open cover $\coll{V_\alpha}$
-    of $A$ (as in \myintref{homotopy::lemma3}), removing the base point $a_0$ from every set
-    and adding $V$ obtained from \myintref{suspension::sharper}.
-    Since $a_0 \in V$, the resulting collection is still a
-    locally finite open cover of $A$.
-    
-    In the following, we denote constructions over $V$
-    with subscript $V$ and constructions over the other sets
-    from the cover with subscript $\alpha$.
+\begin{myproof}[of the Rooted Homotopy Theorem] We need to show that $\ind{f}\bb$ and $\ind{g}\bb$ are rooted isomorphic, that is, there exists an isomorphism-germ $\germ{\ind{f}\bb}{\ind{g}\bb}$ extending $\inv{R_g} \circ R_f = I$ where $I$ denotes the identity germ.
 
-    We continue with the proof of \myintref{homotopy::lemma3}.
-    Note that $\lambda_V(a_0) = 1$.
-    That is because we removed $a_0$ from every other set, and hence $\lambda_\alpha(a_0) = 0$.
+For the initial Homotopy Theorem, we constructed a bundle-germ \[ \germdef{F}{\ind{H}\bb}{\ind{H}\bb[\cylup{A}]} \] covering $(a, t) \mapsto (a, 1)$ and restricted it to $\ind{H}\bb[\cyldown{A}]$. The required isomorphism-germ was then obtained by identifying $\ind{f}\bb$ with $\ind{H}\bb[\cyldown{A}]$ and $\ind{g}\bb$ with $\ind{H}\bb[\cyldown{A}]$.
 
-    Lastly, we construct the extension $R_V$ for $r_V$
-    like in \myintref{section::homotopy_prove},
-    but instead of choosing an arbitrary trivialization
-    $E(\ind{H}\bb\restr{A_V}) \cong A_V \cross \R^n$
-    for the construction we use a representative $r$
-    for the bundle-germ constructed in \myintref{suspension::sharper}.
-    
-    This has the advantage that the representative
-    \[
-        E(\ind{H}\bb[A_V]) \xto{r}
-        A_V \cross \R^n \xto{r_V \cross id} (A_V \cap A'_V) \cross \R^n
-        \xto{\inv{r}} E(\ind{H}\bb[A_V \cap A'_V])
-    \]
-    for $R_V$ maps elements $((a_0, 0), e)$ to $((a_0, 1), e)$.
-    Additionally,
-    every other $R_\alpha$ leaves $\ind{H}\bb[\cyldown{a_0}]$ unaffected
-    because $r_\alpha(a_0, t) = (a_0, \max(\underbrace{\lambda_\alpha(t)}_{= 0}, t)) = (a_0, t)$.
+We must make slight modifications to the construction of $F$ such that it extends $\germ{\ind{f}\bbb \cong \ind{H}\bb[\cyldown{a_0}]}{\ind{H}\bb[\cylup{a_0}] \cong \ind{g}\bbb}$ represented by \[ (a_0, e) = ((a_0, 0), e) \mapsto ((a_0, 1), e) = (a_0, e). \]
 
-    It follows that, by piecing together the $R_\alpha$ and $R_V$ like in \myintref{homotopy::lemma3},
-    we obtain a bundle germ $\germdef{F}{\ind{H}\bb}{\ind{H}\bb[\cylup{A}]}$
-    extending $\inv{R_g} \circ R_f$.
-    This completes the proof.
-\end{myproof}
+This can be achieved by choosing a locally finite open cover $\coll{V_\alpha}$ of $A$ (as in \myintref{homotopy::lemma3}), removing the base point $a_0$ from every set and adding $V$ obtained from \myintref{suspension::sharper}. Since $a_0 \in V$, the resulting collection is still a locally finite open cover of $A$.
+
+In the following, we denote constructions over $V$ with subscript $V$ and constructions over the other sets from the cover with subscript $\alpha$.
+
+We continue with the proof of \myintref{homotopy::lemma3}. Note that $\lambda_V(a_0) = 1$. That is because we removed $a_0$ from every other set, and hence $\lambda_\alpha(a_0) = 0$.
+
+Lastly, we construct the extension $R_V$ for $r_V$ like in \myintref{section::homotopy_prove}, but instead of choosing an arbitrary trivialization $E(\ind{H}\bb\restr{A_V}) \cong A_V \cross \R^n$ for the construction we use a representative $r$ for the bundle-germ constructed in \myintref{suspension::sharper}.
+
+This has the advantage that the representative \[ E(\ind{H}\bb[A_V]) \xto{r} A_V \cross \R^n \xto{r_V \cross id} (A_V \cap A'_V) \cross \R^n \xto{\inv{r}} E(\ind{H}\bb[A_V \cap A'_V]) \] for $R_V$ maps elements $((a_0, 0), e)$ to $((a_0, 1), e)$. Additionally, every other $R_\alpha$ leaves $\ind{H}\bb[\cyldown{a_0}]$ unaffected because $r_\alpha(a_0, t) = (a_0, \max(\underbrace{\lambda_\alpha(t)}_{= 0}, t)) = (a_0, t)$.
+
+It follows that, by piecing together the $R_\alpha$ and $R_V$ like in \myintref{homotopy::lemma3}, we obtain a bundle germ $\germdef{F}{\ind{H}\bb}{\ind{H}\bb[\cylup{A}]}$ extending $\inv{R_g} \circ R_f$. This completes the proof. \end{myproof}
